# flamel

./: .gitignore  Makefile  Makefile.am  README.md  alchemy.hh  attila.cc  attila.hh  claudio.cc  claudio.hh  clean.sh  configure.ac  dump_wav_metadata.sh  evaristo.cc  evaristo.hh  flamel.cc  flamel.cfg  flamel.hh  germain.cc  germain.hh  giotto.cc  giotto.hh  main.cc  omero.cc  omero.hh  paracelsus.hh  setup.sh  sibilla.cc  sibilla.hh  stgermain.cc  stgermain.hh
examples/: Makefile  main.cc  wav.py  wav_file.cc  wav_file.h
